--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.17",
     "react-native-config": "^1.5.3",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^4.4.0",
